laborations/lab2/testsuite/good/decr_in_if.cc
int main () {
  int uw = 0;
  if (uw-- >= 0) 0;
  else 0;
  printInt (uw);
  return 0;
}
