laborations/lab2/testsuite/bad/bad129.cc
int main () {
	if (3 == true) {} else {}
	return 0;
}
